# Nova-Cloud

./: .gitignore  LICENSE.md  README.md
nova-cloud-backend/: .gitignore  Cargo.toml  database.json
nova-cloud-backend/src/: google_drive.rs  main.rs
nova-cloud-frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
nova-cloud-frontend/src/: App.vue
nova-cloud-frontend/src/router/: index.ts
nova-cloud-frontend/src/views/: LoginView.vue  MainView.vue  RegisterView.vue
