[package]
name = "nova-cloud-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
mime_guess = "2.0"

# Google Drive API dependencies
google-drive3 = "5.0.5"
yup-oauth2 = { version = "9.0.0", features = ["service_account"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"